[package]
name = "sawtooth-simple-supply"
version = "0.1.0"
authors = ["GuiltyMorishita <morilliantblue@gmail.com>"]
edition = "2018"

[lib]
name = "protos"
path = "src/protos/lib.rs"

[dependencies]
protobuf = "2.10.1"

[build-dependencies]
protoc-grpcio = "1.1.0"

[workspace]
members = [
  "processor/simple-supply-tp",
  "rest-api/simple-supply-rest-api",
  "subscriber/simple-supply-subscriber",
]
