[package]
name = "simple-supply-tp"
version = "0.1.0"
authors = ["GuiltyMorishita <morilliantblue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sawtooth-sdk = "0.4"
rust-crypto = "0.2"
clap = "2"
log = "0.4"
log4rs = "0.8"
protobuf = "2.10.1"

sawtooth-simple-supply = { path = "../.." }
